# esp-drone

./: .gitignore  CMakeLists.txt  Makefile
local_test/: CMakeLists.txt
local_test/tests/: test_eventchain.cpp  test_input_pkg.cpp  test_main.cpp  test_pipeline.cpp  test_pipeline_processors.cpp  test_pkg.cpp  test_session.cpp
local_test/tests/mocks/: mock_events.h  mock_session.h
main/: CMakeLists.txt
main/src/: main.cpp
main/src/app/: base_main.cpp  base_main.h  main_client.cpp  main_client.h  main_server.cpp  main_server.h
main/src/app/net/: base_wifi.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  wifi_ap.cpp  wifi_ap.h  wifi_sta.cpp  wifi_sta.h
main/src/app/pkg/: adjust_pkg.cpp  adjust_pkg.h  base_pkg.h  hello_pkg.cpp  hello_pkg.h  input_pkg.cpp  input_pkg.h  pkg_factory.h
main/src/app/ses/: base_watchdog.h  builder.cpp  builder.h  builder_factory.h  session.cpp  session.h  session_types.h  system_mutex.cpp  system_mutex.h  system_output_logger.h  system_watchdog.cpp  system_watchdog.h
main/src/app/ses/eve/: builder.cpp  builder.h  event_chain.cpp  event_chain.h  event_types.h
main/src/app/ses/pip/: builder.cpp  builder.h  input_processors.h  pipeline.cpp  pipeline.h  pipeline_types.h  processors.cpp  processors.h
main/src/misc/: test_log.h
test/: CMakeLists.txt
test/tests/: test_input_pkg.cpp
